deploy/production/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grc-admin
  template:
    metadata:
      labels:
        app: grc-admin
    spec:
      serviceAccountName: grc-prod
      containers:
      - name: grc-admin
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-prod-ecr:grc-admin-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
