deploy/production/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grc-dashboard
  template:
    metadata:
      labels:
        app: grc-dashboard
    spec:
      serviceAccountName: grc-prod
      containers:
      - name: grc-dashboard
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-prod-ecr:grc-dashboard-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet:
            path: /
            port: 3002
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
