deploy/production/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grc-app-service
  labels:
    app: grc-app-service
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: grc-app
