deploy/production/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grc-dashboard-service
  labels:
    app: grc-dashboard-service
spec:
  ports:
  - port: 3002
    name: http
    targetPort: 3002
  selector:
    app: grc-dashboard
