deploy/production/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service-admin
  namespace: grc-prod
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32"
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 123 4503  Monday to Friday, 9am to 5pm<br/>\"}";
      }
      error_page 403 @custom_403;
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-admin-grc-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - admin.apply-gender-recognition-certificate.service.gov.uk
    secretName: apply-gender-recognition-service-admin-secret

  rules:
    - host: admin.apply-gender-recognition-certificate.service.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: maintenance-page-svc
                port:
                  number: 3001
